--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ terraform.tfstate.backup
 .terraform
 .terraform.lock.hcl
 
+my-project-dos21-a54a9d0395f1.json
+my-project-dos21-a54a9d0395f1.jsonZone.Identifier
